--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="meme database - robonamari">
   <meta name="description" content="All meme links in the json file">
-  <meta name="keywords" content="json, database, meme">
+  <meta name="keywords" content="api, json, database, meme, link-aggregator">
   <meta name="theme-color" content="#FF0000">
   <meta property="og:title" content="meme database - robonamari">
   <meta property="og:description" content="All meme links in the json file">
