--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>meme database</title>
+  <title>Meme Database</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="meme database - robonamari">
+  <meta name="title" content="Meme Database">
   <meta name="description" content="All meme links in the json file">
   <meta name="keywords" content="api, json, database, meme, link-aggregator">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-  <meta name="theme-color" content="#FF0000">
+  <meta name="theme-color" content="#ffffff">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://meme-database.robonamari.com">
-  <meta property="og:title" content="meme database - robonamari">
+  <meta property="og:title" content="Meme Database">
   <meta property="og:description" content="All meme links in the json file">
   <meta property="og:image" content="https://meme-database.robonamari.com/favicon.ico">
-  <meta property="og:site_name" content="robonamari">
+  <meta property="og:site_name" content="Meme Database">
   <link rel="canonical" href="https://meme-database.robonamari.com">
   <link rel="icon" href="https://meme-database.robonamari.com/favicon.ico" type="image/x-icon">
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "meme database",
+      "name": "Meme Database",
       "url": "https://meme-database.robonamari.com",
       "description": "All meme links in the json file",
       "inLanguage": "en",
