--- a/index.html
+++ b/index.html
@@ -49,23 +49,28 @@
       align-items: center;
       text-align: center;
     }
+
     main {
       background-color: #fff;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
+
     h1 {
       color: #333;
     }
+
     p {
       color: #666;
       font-size: 18px;
       line-height: 1.6;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .github-icon svg {
       width: 30px;
       height: 30px;
@@ -73,6 +78,7 @@
       margin-top: 10px;
       transition: fill 0.3s;
     }
+
     .github-icon:hover svg {
       fill: #007bff;
     }
@@ -82,8 +88,11 @@
 <body>
   <main>
     <h1>Welcome!</h1>
-    <p>Welcome to my world! This is a place where you never get lost, unless you're looking to spy!</p> <a href="https://github.com/robonamari/meme-database" target="_blank" rel="noopener" class="github-icon" title="GitHub Project"> <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 .297C5.373.297 0 5.67 0 12.297c0 5.302 3.438 9.8 8.207 11.385.6.11.793-.26.793-.577v-2.023c-3.34.725-4.043-1.61-4.043-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.084-.729.084-.729 1.205.084 1.84 1.24 1.84 1.24 1.07 1.835 2.807 1.305 3.49.998.108-.776.418-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.123-.303-.535-1.524.116-3.176 0 0 1.008-.322 3.3 1.23a11.4 11.4 0 0 1 3.003-.404c1.02.005 2.045.137 3.003.404 2.29-1.552 3.295-1.23 3.295-1.23.653 1.652.24 2.873.118 3.176.77.84 1.232 1.91 1.232 3.22 0 4.61-2.804 5.626-5.476 5.92.43.37.81 1.102.81 2.385v3.53c0 .32.19.693.8.576C20.565 22.092 24 17.595 24 12.297 24 5.67 18.627.297 12 .297z">
+    <p>Welcome to my world! This is a place where you never get lost, unless you're looking to spy!</p> <a
+      href="https://github.com/robonamari/meme-database" target="_blank" rel="noopener" class="github-icon"
+      title="GitHub Project"> <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M12 .297C5.373.297 0 5.67 0 12.297c0 5.302 3.438 9.8 8.207 11.385.6.11.793-.26.793-.577v-2.023c-3.34.725-4.043-1.61-4.043-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.084-.729.084-.729 1.205.084 1.84 1.24 1.84 1.24 1.07 1.835 2.807 1.305 3.49.998.108-.776.418-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.123-.303-.535-1.524.116-3.176 0 0 1.008-.322 3.3 1.23a11.4 11.4 0 0 1 3.003-.404c1.02.005 2.045.137 3.003.404 2.29-1.552 3.295-1.23 3.295-1.23.653 1.652.24 2.873.118 3.176.77.84 1.232 1.91 1.232 3.22 0 4.61-2.804 5.626-5.476 5.92.43.37.81 1.102.81 2.385v3.53c0 .32.19.693.8.576C20.565 22.092 24 17.595 24 12.297 24 5.67 18.627.297 12 .297z">
       </svg> </a>
   </main>
 </body>
