Remove trailing semicolons before closing braces in CSS

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
+      text-align: center
     }
 
     main {
       background-color: #fff;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1)
     }
 
     h1 {
-      color: #333;
+      color: #333
     }
 
     p {
       color: #666;
       font-size: 18px;
-      line-height: 1.6;
+      line-height: 1.6
     }
 
     a:hover {
-      text-decoration: underline;
+      text-decoration: underline
     }
 
     .github-icon svg {
@@ -76,11 +76,11 @@
       height: 30px;
       fill: #181717;
       margin-top: 10px;
-      transition: fill 0.3s;
+      transition: fill 0.3s
     }
 
     .github-icon:hover svg {
-      fill: #007bff;
+      fill: #007bff
     }
   </style>
 </head>
